gui: Prevent log bar from flashing up while page is loading
The log bar is hidden by CSS, but will appear briefly while the page is
loading (after the html is fetched, but before dev.css is fetched).

Hide it by using an inline style instead, so this does not happen.

--- a/gui/default/assets/css/dev.css
+++ b/gui/default/assets/css/dev.css
@@ -1,5 +1,4 @@
 .dev-top-bar{
-    display: none;
     background-color: yellow;
 }
 
